--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -1,62 +1,31 @@
-/*
- * @NOTE: Prepend a `~` to css file paths that are in your node_modules
- *        See https://github.com/webpack-contrib/sass-loader#imports
- */
-body {
-  position: relative;
-  color: white;
-  height: 100vh;
-  background: linear-gradient(
-    200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
-  );
-  font-family: sans-serif;
-  overflow-y: hidden;
+/* App.css */
+
+.under-title {
+  margin: 0;  
+  font-size: 14px;
+  font-weight: bold;
+  text-align: left;
+}
+
+.app-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  height: 95vh;
+  padding: 10;
+  box-sizing: border-box;
 }
 
-button {
-  background-color: white;
-  padding: 10px 20px;
-  border-radius: 10px;
-  border: none;
-  appearance: none;
-  font-size: 1.3rem;
-  box-shadow: 0px 8px 28px -6px rgba(24, 39, 75, 0.12),
-    0px 18px 88px -4px rgba(24, 39, 75, 0.14);
-  transition: all ease-in 0.1s;
-  cursor: pointer;
-  opacity: 0.9;
+.app-title {
+  margin: 0 0 5px 0;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: left;
 }
 
-button:hover {
-  transform: scale(1.05);
-  opacity: 1;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  height: fit-content;
-  width: fit-content;
-  margin: 10px;
-}
-
-a:hover {
-  opacity: 1;
-  text-decoration: none;
-}
-
-.Hello {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 20px 0;
+.app-layout {
+  display: grid;
+  grid-template-columns: 1fr 2fr; /* 1/3 pour Manager, 2/3 pour Interface */
+  gap: 10px;
+  height: calc(100vh - 10px); /* Ajustement pour inclure le titre */
+  overflow: hidden; /* Suppression de la scrollbar */
 }
