--- a/src/renderer/Interface.css
+++ b/src/renderer/Interface.css
@@ -3,7 +3,7 @@
   border: 1px solid black;
   border-radius: 5px;
   padding: 10px;
-  background-color: #ffffff;
+  background-color: #F0F0F0;
 }
 
 .interface-section {
