--- a/src/renderer/Manager.css
+++ b/src/renderer/Manager.css
@@ -4,6 +4,10 @@
   font-size: 12px;
 }
 
+#bouton-classique {
+  
+}
+
 .capital-update {
   /* insérer les propriétés par défaut */
   width : 50%;
