--- a/src/renderer/Interface.css
+++ b/src/renderer/Interface.css
@@ -51,10 +51,31 @@
 }
 
 .undo-button:hover {
-  background-color: #e63e00;
+  filter: brightness(1.5); /* Éclaircir */
+  cursor: pointer;
 }
 
 .roulette-table {
   display: flex;
   justify-content: center; /* Centre horizontalement le tapis */
 }
+
+.historique-numbers {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2px;
+  border-radius: 5px;
+}
+
+.historique-number {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 5px; /* Optionnel : coins légèrement arrondis */
+  text-align: center;
+}
+
