--- a/src/renderer/RouletteTable.css
+++ b/src/renderer/RouletteTable.css
@@ -17,16 +17,37 @@
   transition: all 0.1s ease;
 }
 
+/* Boutons rouges */
+.button-tapis.red {
+  background-color: #ff4500; /* Rouge */
+  color: white;
+}
+
+/* Boutons noirs */
+.button-tapis.black {
+  background-color: black; /* Noir */
+  color: white;
+}
+
+/* Survol des boutons rouges */
+.button-tapis.red:hover,
+.button-tapis:hover {
+  filter: brightness(1.5); /* Éclaircir */
+  cursor: pointer;
+}
+
+/* Survol des boutons noirs */
+.button-tapis.black:hover {
+  background-color: #363636; /* Gris clair pour un effet plus naturel */
+  cursor: pointer;
+}
+
 .button-tapis:active {
   border-style: inset;
   box-shadow: inset 0 2px rgba(0, 0, 0, 0.2);
   transform: translateY(1px);
 }
 
-.button-tapis:hover {
-  opacity: 0.9;
-  cursor: pointer;
-}
 
 /* Grid principale */
 .table-grid {
@@ -45,7 +66,7 @@
 }
 
 .number-button.red {
-  background-color: #d32f2f;
+  background-color: #ff4500;
 }
 
 .number-button.black {
@@ -118,7 +139,7 @@
 }
 
 .chance-button.red {
-  background-color: #d32f2f;
+  background-color: #ff4500;
 }
 
 .chance-button.black {
